--- a/.github/workflows/BiocCheck.yml
+++ b/.github/workflows/BiocCheck.yml
@@ -1,4 +1,4 @@
-name: R-CMD-check
+name: BiocCheck
 
 on:
   pull_request:
@@ -59,33 +59,6 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
 
-      - uses: r-lib/actions/check-r-package@v2
-
-      - name: Check if actor has permission
-        if: matrix.config.os == 'ubuntu-latest'
-        id: check_permissions
-        run: |
-          # Define allowed actors
-          ALLOWED_ACTORS=("zktuong" "Jiawei-Yu10")  # Replace these with the actual GitHub usernames
-
-          if [[ " ${ALLOWED_ACTORS[@]} " =~ " ${GITHUB_ACTOR} " ]]; then
-            echo "has_permission=true" >> $GITHUB_OUTPUT
-          else
-            echo "has_permission=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Debug permissions output
-        run: |
-          echo "Has permission: ${{ steps.check_permissions.outputs.has_permission }}"
-
-      - name: Setup to test coverage
-        uses: r-lib/actions/setup-r-dependencies@v2
-        if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
+      - uses: grimbough/bioc-actions/run-BiocCheck@v1
         with:
-          packages: covr
-
-      - name: Test coverage
-        if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
-        run: |
-          Rscript -e 'covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")'
-        shell: bash -l {0}
+          error-on: warning
